--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>me.winsh.scons</groupId>
-  <artifactId>scons</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>me.winsh.sconsolver</groupId>
+  <artifactId>sconsolver</artifactId>
+  <version>0.1-SNAPSHOT</version>
   <inceptionYear>2010</inceptionYear>
   <properties>
     <scala.version>2.8.0</scala.version>
