--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.winsh.sconsolver</groupId>
   <artifactId>sconsolver</artifactId>
+  <name>SConSolver</name>
   <version>0.1-SNAPSHOT</version>
+  <description>SConSolver is an integer constaint solver for Scala programming language. </description>
+  <url>https://github.com/kjellwinblad/sconsolver</url>
   <inceptionYear>2010</inceptionYear>
   <properties>
-    <scala.version>2.8.0</scala.version>
+  	<scala.version>2.8.1</scala.version>
   </properties>
 
   <repositories>
